# bonafide

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  settings.toml
api/: Cargo.toml
api/src/: main.rs
api/src/endpoints/: mod.rs
api/src/models/: database.rs  entry.rs  mod.rs  settings.rs
python/: entry.proto  send.py
src/: main.rs
