[package]
name = "bonafide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
chrono = {version = "0.4.31", features=["serde"]}
serde = {version = "1.0.195", features=["derive"]}
timely = "0.12.0"
tokio = {version="1.35.1", features=["full"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[[bin]]
name = "catcher"
