[package]
name = "bonafide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features=["serde"]}
config = "0.13.4"
deadpool-postgres = "0.12.1"
postgres = "0.19.7"
serde = {version = "1.0.195", features=["derive"]}
serde_json = "1.0.111"
timely = "0.12.0"
tokio = {version="1.35.1", features=["full"]}
tokio-postgres = {version = "0.7.10", features = ["with-chrono-0_4"]}
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

